--- a/payment.html
+++ b/payment.html
@@ -19,7 +19,6 @@
             --border: rgba(255,255,255,0.08);
             --radius: 18px;
             --shadow: rgba(0,0,0,0.55);
-            --success: #28a745;
         }
         * { margin:0; padding:0; box-sizing:border-box; }
         body {
@@ -83,10 +82,7 @@
             border-bottom: 1px dashed var(--border);
             font-size: 1.05rem;
         }
-        .delivery-free {
-            color: #4caf50;
-            font-weight: 700;
-        }
+        .delivery-free { color: #4caf50; font-weight: 700; }
         .total-row {
             display: flex;
             justify-content: space-between;
@@ -130,16 +126,9 @@
             font-size: 1.2rem;
             display: none;
         }
-        .success {
-            background: rgba(40,167,69,0.15);
-            color: #4caf50;
-            border: 1px solid rgba(40,167,69,0.3);
-        }
-        .error {
-            background: rgba(220,53,69,0.12);
-            color: #dc3545;
-            border: 1px solid rgba(220,53,69,0.3);
-        }
+        .success { background: rgba(40,167,69,0.15); color: #4caf50; border: 1px solid rgba(40,167,69,0.3); }
+        .warning { background: rgba(255,152,0,0.15); color: #ff9800; border: 1px solid rgba(255,152,0,0.3); }
+        .error   { background: rgba(220,53,69,0.12); color: #dc3545; border: 1px solid rgba(220,53,69,0.3); }
         #orderPopup {
             position: fixed;
             inset: 0;
@@ -158,15 +147,8 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.7);
             max-width: 90%;
         }
-        .popup-content h2 {
-            margin-bottom: 1rem;
-            font-size: 2.2rem;
-        }
-        .popup-content p {
-            font-size: 1.3rem;
-            margin-bottom: 2rem;
-            color: var(--text-muted);
-        }
+        .popup-content h2 { margin-bottom: 1rem; font-size: 2.2rem; }
+        .popup-content p { font-size: 1.3rem; margin-bottom: 2rem; color: var(--text-muted); }
         @media (max-width: 480px) {
             .container { padding: 1.8rem; }
             h2 { font-size: 1.9rem; }
@@ -179,27 +161,27 @@
 <!-- Success Popup -->
 <div id="orderPopup">
     <div class="popup-content">
-        <h2>Order Placed Successfully!</h2>
-        <p>Redirecting to WhatsApp...</p>
+        <h2>Order Placed!</h2>
+        <p id="popupText">Redirecting to WhatsApp...</p>
         <i class="fas fa-check-circle" style="font-size:5rem;color:#4caf50;margin:1rem 0;"></i>
     </div>
 </div>
 
 <script>
-    // Storage Keys
+    // ────────────────────────────────────────────────
+    // CONFIG
+    // ────────────────────────────────────────────────
     const CART_KEY = "chatpoint_cart";
     const USER_KEY = "chatpoint_user";
-
-    // WhatsApp numbers
-    const PRIMARY = "9739632364";
-    const BACKUP = "8088975913";
-
-    // Backend API endpoint
+    const PRIMARY_WHATSAPP = "9739632364";
+    const BACKUP_WHATSAPP = "8088975913";
     const BACKEND_URL = "https://chatpoint-3ycy.onrender.com/api/save-order";
 
-    // Special water item logic
     const WATER = { shop: "_special_", name: "1L Pure Water Bottle", price: 13 };
 
+    // ────────────────────────────────────────────────
+    // HELPERS
+    // ────────────────────────────────────────────────
     function hasWater(cart) {
         return (cart?.[WATER.shop]?.[WATER.name]?.qty || 0) > 0;
     }
@@ -235,6 +217,21 @@
         return user;
     }
 
+    function showMessage(text, type = "info") {
+        const el = document.getElementById("statusMsg") || document.createElement("div");
+        if (!document.getElementById("statusMsg")) {
+            el.id = "statusMsg";
+            el.className = "msg";
+            document.querySelector(".container").prepend(el);
+        }
+        el.textContent = text;
+        el.className = `msg ${type}`;
+        el.style.display = "block";
+    }
+
+    // ────────────────────────────────────────────────
+    // RENDER CHECKOUT FORM
+    // ────────────────────────────────────────────────
     function renderForm(user) {
         const savedCart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
         if (Object.keys(savedCart).length === 0) {
@@ -271,7 +268,6 @@
         window.tempOrderData = {
             itemsArray,
             subtotal,
-            shopName,
             deliveryCharge,
             grandTotal,
             cart: savedCart
@@ -279,8 +275,7 @@
 
         document.getElementById("mainContainer").innerHTML = `
             <h2>Checkout</h2>
-            <div id="successMsg" class="msg success"></div>
-            <div id="errorMsg" class="msg error"></div>
+            <div id="statusMsg" class="msg" style="display:none;"></div>
 
             <div class="form-group">
                 <label>Name *</label>
@@ -326,6 +321,9 @@
         document.getElementById("placeOrderBtn").onclick = placeOrder;
     }
 
+    // ────────────────────────────────────────────────
+    // PLACE ORDER LOGIC
+    // ────────────────────────────────────────────────
     async function placeOrder() {
         const name = document.getElementById("name").value.trim();
         const phone = document.getElementById("phone").value.trim();
@@ -333,106 +331,82 @@
         const address2 = document.getElementById("address2").value.trim();
 
         if (!name || !phone || !address1) {
-            showError("Please fill all required fields.");
+            showMessage("Please fill all required fields.", "error");
             return;
         }
 
-        const placeBtn = document.getElementById("placeOrderBtn");
-        placeBtn.disabled = true;
-        placeBtn.textContent = "Processing...";
+        const btn = document.getElementById("placeOrderBtn");
+        btn.disabled = true;
+        btn.textContent = "Processing...";
 
-        const { itemsArray, subtotal, shopName, deliveryCharge, grandTotal, cart } = window.tempOrderData;
+        const { itemsArray, subtotal, deliveryCharge, grandTotal, cart } = window.tempOrderData;
 
         const orderData = {
-            user: { name, phone },
-            shop: shopName,
-            items: itemsArray.map(item => ({
-                name: item.name,
-                price: item.price,
-                quantity: item.quantity
-            })),
-            totalAmount: grandTotal,
-            deliveryCharge: deliveryCharge,
-            address: {
-                name,
-                phone,
-                line1: address1,
-                line2: address2 || ""
-            },
+            name,
+            phone,
+            address1,
+            address2: address2 || "",
+            items: itemsArray,
+            subtotal,
+            deliveryCharge,
+            grandTotal,
             paymentMethod: "cash",
-            status: "pending",
-            date: new Date(),
-            cart: cart  // optional but helpful for backend
+            cart
         };
 
-        try {
-            const response = await fetch(BACKEND_URL, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(orderData),
-                mode: "cors",           // explicitly set
-                credentials: "omit"     // no cookies needed here
-            });
-
-            // Even if fetch fails → we still send WhatsApp
-            showSuccessPopup();
-
-            const orderSummary = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
-            const finalMsg = `NEW ORDER\n\n${orderSummary}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? '\n'+address2 : ''}\nSubtotal: ₹${subtotal}\nDelivery: ${deliveryCharge === 0 ? 'FREE' : '₹'+deliveryCharge}\nTotal: ₹${grandTotal}`;
-            const encoded = encodeURIComponent(finalMsg);
-
-            setTimeout(() => {
-                window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, "_blank");
-                setTimeout(() => {
-                    window.open(`https://wa.me/91${BACKUP}?text=${encoded}`, "_blank");
-                }, 1200);
-            }, 2800);
-
-            localStorage.removeItem(CART_KEY);
-
-            setTimeout(() => {
-                window.location.href = "tracking.html";
-            }, 4500);
-
-        } catch (err) {
-            console.error("Order placement error:", err);
-            console.error("→ This is most likely a CORS error from the backend.");
-            console.error("→ Fix: Update CORS settings in your Express server to allow https://chatpoint1.onrender.com");
-
-            showError(
-                "Could not save order to server (CORS issue?). " +
-                "But your order was sent via WhatsApp. " +
-                "Please contact support if this keeps happening."
-            );
-
-            placeBtn.disabled = false;
-            placeBtn.textContent = "Place Order (COD)";
-        }
-    }
-
-    function showSuccessPopup() {
-        const popup = document.getElementById("orderPopup");
-        popup.style.display = "flex";
+        // Show popup immediately (optimistic UI)
+        document.getElementById("orderPopup").style.display = "flex";
         confetti({
             particleCount: 120,
             spread: 80,
             origin: { y: 0.6 },
             colors: ['#e6b25c', '#ffffff', '#bb8c3d', '#4caf50']
         });
-    }
 
-    function showSuccess(msg) {
-        const el = document.getElementById("successMsg");
-        el.textContent = msg;
-        el.style.display = "block";
-        document.getElementById("errorMsg").style.display = "none";
-    }
+        // Prepare WhatsApp message
+        const orderSummary = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
+        const msg = `NEW ORDER\n\n${orderSummary}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? '\n'+address2 : ''}\nSubtotal: ₹${subtotal}\nDelivery: ${deliveryCharge === 0 ? 'FREE' : '₹'+deliveryCharge}\nTotal: ₹${grandTotal}`;
+        const encoded = encodeURIComponent(msg);
 
-    function showError(msg) {
-        const el = document.getElementById("errorMsg");
-        el.textContent = msg;
-        el.style.display = "block";
-        document.getElementById("successMsg").style.display = "none";
+        // Always send WhatsApp
+        setTimeout(() => {
+            window.open(`https://wa.me/91${PRIMARY_WHATSAPP}?text=${encoded}`, "_blank");
+            setTimeout(() => {
+                window.open(`https://wa.me/91${BACKUP_WHATSAPP}?text=${encoded}`, "_blank");
+            }, 1200);
+        }, 2800);
+
+        // Try to save to backend
+        let backendSuccess = false;
+        try {
+            const response = await fetch(BACKEND_URL, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(orderData)
+            });
+
+            if (response.ok) {
+                backendSuccess = true;
+                document.getElementById("popupText").textContent = "Order saved & sent to WhatsApp!";
+            }
+        } catch (err) {
+            console.error("Backend error:", err);
+        }
+
+        // Clear cart
+        localStorage.removeItem(CART_KEY);
+
+        // Redirect after delay
+        setTimeout(() => {
+            window.location.href = "tracking.html";
+        }, 5000);
+
+        // Show status message
+        if (backendSuccess) {
+            showMessage("Order successfully saved and sent via WhatsApp!", "success");
+        } else {
+            showMessage("Order sent via WhatsApp (database save failed - team is fixing it)", "warning");
+        }
     }
 
     window.onload = () => {
