--- a/items.html
+++ b/items.html
@@ -6,7 +6,7 @@
   <title>Menu - ChatPoint</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
-
+  
   <style>
     :root {
       --primary: #e63946;
@@ -19,12 +19,7 @@
       --radius: 16px;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: 'Poppins', sans-serif;
       background: var(--light);
@@ -54,15 +49,14 @@
       border-radius: 50%;
     }
 
-    .back-btn:hover {
-      background: rgba(230,57,70,0.1);
-    }
+    .back-btn:hover { background: rgba(230,57,70,0.1); }
 
     .page-title {
       font-size: 1.45rem;
       font-weight: 700;
     }
 
+    /* Top fixed cart bar */
     .cart-bar {
       position: fixed;
       top: 60px;
@@ -78,9 +72,7 @@
       border-bottom: 1px solid #eee;
     }
 
-    .cart-bar.visible {
-      display: flex;
-    }
+    .cart-bar.visible { display: flex; }
 
     .cart-info {
       font-size: 1.1rem;
@@ -98,9 +90,7 @@
       cursor: pointer;
     }
 
-    .view-cart-btn:hover {
-      background: var(--primary-dark);
-    }
+    .view-cart-btn:hover { background: var(--primary-dark); }
 
     main {
       padding: 90px 18px 220px;
@@ -120,11 +110,7 @@
       margin: 0 auto 24px;
       max-width: 380px;
     }
-
-    .veg-nonveg-filter.active {
-      display: flex;
-    }
-
+    .veg-nonveg-filter.active { display: flex; }
     .filter-btn {
       flex: 1;
       padding: 14px;
@@ -134,21 +120,9 @@
       cursor: pointer;
       color: white;
     }
-
-    .filter-btn.veg {
-      background: #2a9d8f;
-      border-radius: 14px 0 0 14px;
-    }
-
-    .filter-btn.nonveg {
-      background: var(--primary);
-      border-radius: 0 14px 14px 0;
-    }
-
-    .filter-btn.active {
-      transform: scale(1.05);
-      box-shadow: 0 0 0 4px rgba(255,255,255,0.4);
-    }
+    .filter-btn.veg { background: #2a9d8f; border-radius: 14px 0 0 14px; }
+    .filter-btn.nonveg { background: var(--primary); border-radius: 0 14px 14px 0; }
+    .filter-btn.active { transform: scale(1.05); box-shadow: 0 0 0 4px rgba(255,255,255,0.4); }
 
     .items-container {
       display: grid;
@@ -160,9 +134,8 @@
       border-radius: var(--radius);
       overflow: hidden;
       box-shadow: var(--shadow-sm);
+      padding: 18px;
       transition: all 0.25s ease;
-      display: flex;
-      flex-direction: column;
     }
 
     .item-card:hover {
@@ -170,42 +143,17 @@
       box-shadow: 0 16px 40px rgba(230,57,70,0.18);
     }
 
-    .item-img-container {
-      width: 100%;
-      height: 160px;
-      overflow: hidden;
-      background: #f8f9fa;
-    }
-
-    .item-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transition: transform 0.4s ease;
-    }
-
-    .item-card:hover .item-img {
-      transform: scale(1.08);
-    }
-
-    .item-details {
-      padding: 16px 18px;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-
     .item-name {
       font-size: 1.25rem;
       font-weight: 700;
-      margin-bottom: 6px;
+      margin-bottom: 8px;
     }
 
     .item-price {
       font-size: 1.45rem;
       font-weight: 800;
       color: var(--primary);
-      margin: 4px 0 12px;
+      margin: 8px 0 12px;
     }
 
     .quantity-row {
@@ -226,9 +174,7 @@
       transition: all 0.2s;
     }
 
-    .qty-btn:hover {
-      background: rgba(230,57,70,0.18);
-    }
+    .qty-btn:hover { background: rgba(230,57,70,0.18); }
 
     .qty-value {
       font-size: 1.35rem;
@@ -244,7 +190,7 @@
       transform: translateX(-50%);
       width: 92%;
       max-width: 420px;
-      padding: 16px 22px;
+      padding: 18px 22px;
       background: linear-gradient(135deg, #ff4b5c, #e63946);
       color: white;
       border-radius: 22px;
@@ -253,25 +199,23 @@
       cursor: pointer;
       transition: 0.25s ease;
       animation: popUp 0.35s ease-out;
-      text-align: center;
-      font-size: 1.7rem;
-      font-weight: 900;
-      letter-spacing: 0.4px;
     }
 
-    .cart-summary-bar.visible {
-      display: block !important;
+    .cart-summary-bar.visible { display: block !important; }
+
+    .grand-total-row {
+      text-align: center;
+      font-size: 1.8rem;
+      font-weight: 900;
+      letter-spacing: 0.5px;
     }
 
     @keyframes popUp {
       from { transform: translateX(-50%) translateY(30px); opacity: 0; }
-      to   { transform: translateX(-50%) translateY(0);    opacity: 1; }
+      to   { transform: translateX(-50%) translateY(0); opacity: 1; }
     }
 
-    @media (max-width: 480px) {
-      .item-img-container { height: 140px; }
-      .cart-summary-bar   { font-size: 1.5rem; padding: 14px 20px; }
-    }
+    .hidden { display: none !important; }
   </style>
 </head>
 <body>
@@ -293,21 +237,26 @@
 
 <main>
   <h1 class="shop-name" id="shopName">Loading...</h1>
+
   <div class="veg-nonveg-filter" id="vegNonVegFilter">
     <button class="filter-btn veg active" onclick="filterItems('veg')">Veg</button>
     <button class="filter-btn nonveg" onclick="filterItems('nonveg')">Non-Veg</button>
   </div>
+
   <div class="items-container" id="itemsContainer"></div>
 </main>
 
 <div class="cart-summary-bar" id="cartSummaryBar" onclick="window.location.href='cart.html'">
-  Total: <span id="grandTotal">₹0</span> →
+  <div class="grand-total-row">
+    Total: <span id="grandTotal">₹0</span> →
+  </div>
 </div>
 
 <script>
-// ─────────────────────────────────────────────
-// CONFIG
-// ─────────────────────────────────────────────
+// =============================================
+// CONFIG - ALL SHOPS & ALL ITEMS (no images)
+// =============================================
+
 const DELIVERY_THRESHOLD = 100;
 const DELIVERY_FEE = 20;
 
@@ -605,32 +554,12 @@ const shopMenus = {
     { name: "Veg Sandwich", originalPrice: 78 - 25 },
     { name: "Mango Cake", originalPrice: 612 - 25 }
   ]
-  // ... (all other shops remain exactly the same as in your code)
-  // For brevity I omitted repeating all shops here — copy them from your original code
 };
 
-// ─────────────────────────────────────────────
-// IMAGES (mostly Unsplash – reliable & fast)
-// ─────────────────────────────────────────────
-const itemImages = {
-  "Margarita": "https://images.unsplash.com/photo-1600028068383-ea11a7a101f3?w=800",
-  "Veggie": "https://images.unsplash.com/photo-1513104890138-7c749659a591?w=800",
-  "Veg Lover": "https://images.unsplash.com/photo-1593504049359-52d7a6a199d9?w=800",
-  "Tandoori Paneer": "https://images.unsplash.com/photo-1626645738538-2f6a0e3b58d9?w=800",
-  "Paneer Pizza": "https://images.unsplash.com/photo-1615717150412-68a2d0c3e0c9?w=800",
-  "Burger Classic": "https://images.unsplash.com/photo-1568901346375-23c9450c58cd?w=800",
-  "French Fries": "https://images.unsplash.com/photo-1585109643930-0f5d0c2e8e2c?w=800",
-  "Veg Manchurian": "https://images.unsplash.com/photo-1606491956689-2ea866880c84?w=800",
-  "Gobi Manchurian": "https://images.unsplash.com/photo-1606491956689-2ea866880c84?w=800",
-  "Masala Dosa": "https://images.unsplash.com/photo-1630409351343-6360a6a2b0c8?w=800",
-  "Black Forest Cake": "https://images.unsplash.com/photo-1606890658317-7d14490b76fd?w=800",
-  "Cold Coffee": "https://images.unsplash.com/photo-1572449043416-55f4685c9bb7?w=800",
-  "default": "https://images.unsplash.com/photo-1594179047519-f347310d3322?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8ZmFzdCUyMGZvb2R8ZW58MHx8MHx8fDA%3D"
-};
-
-// ─────────────────────────────────────────────
+// =============================================
 // UTILITIES
-// ─────────────────────────────────────────────
+// =============================================
+
 function getDisplayedPrice(original) {
   return original <= 100 ? original + 20 : original + 40;
 }
@@ -644,9 +573,10 @@ function formatPrice(num) {
   return "₹" + Math.round(num);
 }
 
-// ─────────────────────────────────────────────
+// =============================================
 // CART LOGIC
-// ─────────────────────────────────────────────
+// =============================================
+
 let cart = JSON.parse(localStorage.getItem("chatpoint_cart")) || {};
 
 function saveCart() {
@@ -688,12 +618,14 @@ function updateCartUI() {
   const subtotal = getCartSubtotal();
   const delivery = subtotal < DELIVERY_THRESHOLD ? DELIVERY_FEE : 0;
   const grand = subtotal + delivery;
+
   document.getElementById("grandTotal").textContent = formatPrice(grand);
 }
 
 function changeQty(shop, name, price, delta) {
   if (!cart[shop]) cart[shop] = {};
   if (!cart[shop][name]) cart[shop][name] = { qty: 0, price };
+
   cart[shop][name].qty = Math.max(0, (cart[shop][name].qty || 0) + delta);
 
   if (cart[shop][name].qty === 0) delete cart[shop][name];
@@ -704,9 +636,10 @@ function changeQty(shop, name, price, delta) {
   updateCartUI();
 }
 
-// ─────────────────────────────────────────────
-// RENDER MENU
-// ─────────────────────────────────────────────
+// =============================================
+// RENDER MENU (no images)
+// =============================================
+
 function renderMenu() {
   const container = document.getElementById("itemsContainer");
   container.innerHTML = "";
@@ -715,6 +648,7 @@ function renderMenu() {
   const items = shopMenus[shop] || [];
 
   document.getElementById("shopName").textContent = shop || "Shop not found";
+
   document.getElementById("vegNonVegFilter").classList.toggle("active", shop === "Dolphin Hotel");
 
   if (items.length === 0) {
@@ -722,7 +656,8 @@ function renderMenu() {
       <div style="text-align:center; padding:100px 20px; color:#777;">
         <i class="fas fa-utensils" style="font-size:3rem; opacity:0.3;"></i><br>
         No items available
-      </div>`;
+      </div>
+    `;
     return;
   }
 
@@ -734,35 +669,26 @@ function renderMenu() {
 
     const price = getDisplayedPrice(item.originalPrice);
     const qty = cart[shop]?.[item.name]?.qty || 0;
-    const imgUrl = itemImages[item.name] || itemImages["default"];
 
     const card = document.createElement("div");
     card.className = "item-card";
     card.innerHTML = `
-      <div class="item-img-container">
-        <img class="item-img" 
-             src="${imgUrl}" 
-             alt="${item.name}" 
-             loading="lazy"
-             onerror="this.src='${itemImages['default']}'">
-      </div>
-      <div class="item-details">
-        <div class="item-name">${item.name}</div>
-        <div class="item-price">${formatPrice(price)}</div>
-        <div class="quantity-row">
-          <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, -1)">−</button>
-          <span class="qty-value">${qty}</span>
-          <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, 1)">+</button>
-        </div>
+      <div class="item-name">${item.name}</div>
+      <div class="item-price">${formatPrice(price)}</div>
+      <div class="quantity-row">
+        <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, -1)">−</button>
+        <span class="qty-value">${qty}</span>
+        <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, 1)">+</button>
       </div>
     `;
     container.appendChild(card);
   });
 }
 
-// ─────────────────────────────────────────────
+// =============================================
 // INIT
-// ─────────────────────────────────────────────
+// =============================================
+
 let currentFilter = "veg";
 
 function filterItems(type) {
@@ -773,8 +699,17 @@ function filterItems(type) {
   renderMenu();
 }
 
+const currentShop = getShopFromURL();
+if (currentShop && shopMenus[currentShop]) {
+  document.getElementById("shopName").textContent = currentShop;
+} else {
+  document.getElementById("shopName").textContent = "Shop not found";
+}
+
 renderMenu();
 updateCartUI();
 </script>
 </body>
 </html>
+
+for this i want to add images for these items
