--- a/index.html
+++ b/index.html
@@ -412,6 +412,13 @@ const shops = [
     desc: "100% veg pizzas, light & tasty.",
     items: ["Paneer Tikka", "Corn & Cheese", "Nuggets", "Veg Extravaganza"]
   },
+   {
+    name: " MANIKANT BENNE DOSA",
+    img: "https://plus.unsplash.com/premium_photo-1674106347866-8282d8c19f84?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTI5fHxmb29kfGVufDB8fDB8fHww",
+    rating: 4.7,
+    desc: "tasty breakfast  with secret sauce.",
+    items: ["dosa", "idly", "vada", "set dosa"]
+  },
   {
     name: "Hasanamba Iyengar Bakery",
     img: "https://plus.unsplash.com/premium_photo-1665669263531-cdcbe18e7fe4?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmFrZXJ5fGVufDB8fDB8fHww",
