--- a/items.html
+++ b/items.html
@@ -506,6 +506,19 @@ const shopMenus = {
     { name: "Veg Burger Patty", originalPrice: 40 },
     { name: "Non Veg Burger Patty", originalPrice: 40 }
   ],
+    "Nandi Grand Hotels": [
+  { name: "Idli", originalPrice: 30 },
+  { name: "Vada", originalPrice: 35 },
+  { name: "Benne Dosa", originalPrice: 55 },
+  { name: "Single Benne Dosa", originalPrice: 55 },
+  { name: "Idli Vada", originalPrice: 35 },
+  { name: "Masala Rice", originalPrice: 35 },
+  { name: "Khali Dosa", originalPrice: 35 },
+  { name: "Avalakki", originalPrice: 35 },
+  { name: "Shabudanni Susla", originalPrice: 35 },
+  { name: "Set Dosa", originalPrice: 50 }
+],
+      ],
   "Nandi Grand Hotels": [
     { name: "Shira", originalPrice: 25 },
     { name: "Poori", originalPrice: 60 },
