--- a/items.html
+++ b/items.html
@@ -506,7 +506,7 @@ const shopMenus = {
     { name: "Veg Burger Patty", originalPrice: 40 },
     { name: "Non Veg Burger Patty", originalPrice: 40 }
   ],
-    "Nandi Grand Hotels": [
+    "MANIKANT BENNE DOSA": [
   { name: "Idli", originalPrice: 30 },
   { name: "Vada", originalPrice: 35 },
   { name: "Benne Dosa", originalPrice: 55 },
