--- a/items.html
+++ b/items.html
@@ -18,7 +18,6 @@
       --shadow-sm: 0 6px 20px rgba(0,0,0,0.08);
       --radius: 16px;
     }
-
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: 'Poppins', sans-serif;
@@ -26,7 +25,6 @@
       color: var(--dark);
       min-height: 100vh;
     }
-
     header {
       background: white;
       padding: 14px 18px;
@@ -38,7 +36,6 @@
       align-items: center;
       justify-content: space-between;
     }
-
     .back-btn {
       font-size: 1.9rem;
       background: none;
@@ -48,15 +45,11 @@
       padding: 8px;
       border-radius: 50%;
     }
-
     .back-btn:hover { background: rgba(230,57,70,0.1); }
-
     .page-title {
       font-size: 1.45rem;
       font-weight: 700;
     }
-
-    /* Top fixed cart bar */
     .cart-bar {
       position: fixed;
       top: 60px;
@@ -71,15 +64,12 @@
       z-index: 999;
       border-bottom: 1px solid #eee;
     }
-
     .cart-bar.visible { display: flex; }
-
     .cart-info {
       font-size: 1.1rem;
       font-weight: 600;
       color: var(--primary);
     }
-
     .view-cart-btn {
       background: var(--primary);
       color: white;
@@ -89,13 +79,10 @@
       font-weight: 700;
       cursor: pointer;
     }
-
     .view-cart-btn:hover { background: var(--primary-dark); }
-
     main {
       padding: 90px 18px 220px;
     }
-
     h1.shop-name {
       font-size: 2rem;
       font-weight: 800;
@@ -103,7 +90,6 @@
       margin: 0 0 28px;
       text-align: center;
     }
-
     .veg-nonveg-filter {
       display: none;
       justify-content: center;
@@ -123,12 +109,10 @@
     .filter-btn.veg { background: #2a9d8f; border-radius: 14px 0 0 14px; }
     .filter-btn.nonveg { background: var(--primary); border-radius: 0 14px 14px 0; }
     .filter-btn.active { transform: scale(1.05); box-shadow: 0 0 0 4px rgba(255,255,255,0.4); }
-
     .items-container {
       display: grid;
       gap: 20px;
     }
-
     .item-card {
       background: var(--card-bg);
       border-radius: var(--radius);
@@ -137,31 +121,26 @@
       padding: 18px;
       transition: all 0.25s ease;
     }
-
     .item-card:hover {
       transform: translateY(-6px);
       box-shadow: 0 16px 40px rgba(230,57,70,0.18);
     }
-
     .item-name {
       font-size: 1.25rem;
       font-weight: 700;
       margin-bottom: 8px;
     }
-
     .item-price {
       font-size: 1.45rem;
       font-weight: 800;
       color: var(--primary);
       margin: 8px 0 12px;
     }
-
     .quantity-row {
       display: flex;
       align-items: center;
       gap: 16px;
     }
-
     .qty-btn {
       width: 44px;
       height: 44px;
@@ -173,16 +152,13 @@
       cursor: pointer;
       transition: all 0.2s;
     }
-
     .qty-btn:hover { background: rgba(230,57,70,0.18); }
-
     .qty-value {
       font-size: 1.35rem;
       font-weight: 700;
       min-width: 40px;
       text-align: center;
     }
-
     .cart-summary-bar {
       position: fixed;
       bottom: 18px;
@@ -200,26 +176,20 @@
       transition: 0.25s ease;
       animation: popUp 0.35s ease-out;
     }
-
     .cart-summary-bar.visible { display: block !important; }
-
     .grand-total-row {
       text-align: center;
       font-size: 1.8rem;
       font-weight: 900;
       letter-spacing: 0.5px;
     }
-
     @keyframes popUp {
       from { transform: translateX(-50%) translateY(30px); opacity: 0; }
-      to   { transform: translateX(-50%) translateY(0); opacity: 1; }
+      to { transform: translateX(-50%) translateY(0); opacity: 1; }
     }
-
-    .hidden { display: none !important; }
   </style>
 </head>
 <body>
-
 <header>
   <button class="back-btn" onclick="window.location.href='index.html'">←</button>
   <div class="page-title">Menu</div>
@@ -237,12 +207,10 @@
 
 <main>
   <h1 class="shop-name" id="shopName">Loading...</h1>
-
   <div class="veg-nonveg-filter" id="vegNonVegFilter">
     <button class="filter-btn veg active" onclick="filterItems('veg')">Veg</button>
     <button class="filter-btn nonveg" onclick="filterItems('nonveg')">Non-Veg</button>
   </div>
-
   <div class="items-container" id="itemsContainer"></div>
 </main>
 
@@ -254,9 +222,8 @@
 
 <script>
 // =============================================
-// CONFIG - ALL SHOPS & ALL ITEMS (no images)
+// CONFIG
 // =============================================
-
 const DELIVERY_THRESHOLD = 100;
 const DELIVERY_FEE = 20;
 
@@ -507,17 +474,17 @@ const shopMenus = {
     { name: "Non Veg Burger Patty", originalPrice: 40 }
   ],
   "MANIKANT BENNE DOSA": [
-   { name: "Idli", originalPrice: 30 },
-   { name: "Vada", originalPrice: 35 },
-   { name: "Benne Dosa", originalPrice: 55 },
-   { name: "Single Benne Dosa", originalPrice: 55 },
-   { name: "Idli Vada", originalPrice: 35 },
-   { name: "Masala Rice", originalPrice: 35 },
-   { name: "Khali Dosa", originalPrice: 35 },
-   { name: "Avalakki", originalPrice: 35 },
-   { name: "Shabudanni Susla", originalPrice: 35 },
-   { name: "Set Dosa", originalPrice: 50 }
-],
+    { name: "Idli", originalPrice: 30 },
+    { name: "Vada", originalPrice: 35 },
+    { name: "Benne Dosa", originalPrice: 55 },
+    { name: "Single Benne Dosa", originalPrice: 55 },
+    { name: "Idli Vada", originalPrice: 35 },
+    { name: "Masala Rice", originalPrice: 35 },
+    { name: "Khali Dosa", originalPrice: 35 },
+    { name: "Avalakki", originalPrice: 35 },
+    { name: "Shabudanni Susla", originalPrice: 35 },
+    { name: "Set Dosa", originalPrice: 50 }
+  ],
   "Nandi Grand Hotels": [
     { name: "Shira", originalPrice: 25 },
     { name: "Poori", originalPrice: 60 },
@@ -571,14 +538,13 @@ const shopMenus = {
 // =============================================
 // UTILITIES
 // =============================================
-
 function getDisplayedPrice(original) {
   return original <= 100 ? original + 20 : original + 40;
 }
 
 function getShopFromURL() {
   const params = new URLSearchParams(location.search);
-  return decodeURIComponent(params.get("shop") || "");
+  return decodeURIComponent(params.get("shop") || "").trim();
 }
 
 function formatPrice(num) {
@@ -588,7 +554,6 @@ function formatPrice(num) {
 // =============================================
 // CART LOGIC
 // =============================================
-
 let cart = JSON.parse(localStorage.getItem("chatpoint_cart")) || {};
 
 function saveCart() {
@@ -613,7 +578,6 @@ function updateCartUI() {
       count += cart[shop][item].qty;
     }
   }
-
   document.getElementById("cartCountBar").textContent = count;
 
   const topBar = document.getElementById("cartBar");
@@ -630,57 +594,63 @@ function updateCartUI() {
   const subtotal = getCartSubtotal();
   const delivery = subtotal < DELIVERY_THRESHOLD ? DELIVERY_FEE : 0;
   const grand = subtotal + delivery;
-
   document.getElementById("grandTotal").textContent = formatPrice(grand);
 }
 
 function changeQty(shop, name, price, delta) {
   if (!cart[shop]) cart[shop] = {};
   if (!cart[shop][name]) cart[shop][name] = { qty: 0, price };
-
   cart[shop][name].qty = Math.max(0, (cart[shop][name].qty || 0) + delta);
-
   if (cart[shop][name].qty === 0) delete cart[shop][name];
   if (Object.keys(cart[shop]).length === 0) delete cart[shop];
-
   saveCart();
   renderMenu();
   updateCartUI();
 }
 
 // =============================================
-// RENDER MENU (no images)
+// RENDER MENU
 // =============================================
+let currentFilter = "veg";
 
 function renderMenu() {
   const container = document.getElementById("itemsContainer");
   container.innerHTML = "";
 
-  const shop = getShopFromURL();
-  const items = shopMenus[shop] || [];
+  const inputShop = getShopFromURL();
 
-  document.getElementById("shopName").textContent = shop || "Shop not found";
+  // Case-insensitive lookup
+  const shopKey = Object.keys(shopMenus).find(
+    key => key.toLowerCase() === inputShop.toLowerCase()
+  );
 
-  document.getElementById("vegNonVegFilter").classList.toggle("active", shop === "Dolphin Hotel");
+  const items = shopKey ? shopMenus[shopKey] : [];
+
+  // Show original casing from shopMenus
+  document.getElementById("shopName").textContent = shopKey || inputShop || "Shop not found";
+
+  // Show filter only for Dolphin Hotel
+  document.getElementById("vegNonVegFilter").classList.toggle("active", shopKey === "Dolphin Hotel");
 
   if (items.length === 0) {
     container.innerHTML = `
-      <div style="text-align:center; padding:100px 20px; color:#777;">
-        <i class="fas fa-utensils" style="font-size:3rem; opacity:0.3;"></i><br>
-        No items available
+      <div style="text-align:center; padding:120px 20px; color:#777; font-size:1.2rem;">
+        <i class="fas fa-utensils" style="font-size:3.5rem; opacity:0.4; margin-bottom:16px;"></i><br>
+        No items available${inputShop ? ` for "${inputShop}"` : ""}
       </div>
     `;
     return;
   }
 
   items.forEach(item => {
-    if (shop === "Dolphin Hotel") {
+    // Apply filter only for Dolphin Hotel
+    if (shopKey === "Dolphin Hotel") {
       if (currentFilter === "veg" && item.type === "nonveg") return;
       if (currentFilter === "nonveg" && item.type === "veg") return;
     }
 
     const price = getDisplayedPrice(item.originalPrice);
-    const qty = cart[shop]?.[item.name]?.qty || 0;
+    const qty = cart[shopKey]?.[item.name]?.qty || 0;
 
     const card = document.createElement("div");
     card.className = "item-card";
@@ -688,9 +658,9 @@ function renderMenu() {
       <div class="item-name">${item.name}</div>
       <div class="item-price">${formatPrice(price)}</div>
       <div class="quantity-row">
-        <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, -1)">−</button>
+        <button class="qty-btn" onclick="changeQty('${shopKey}', '${item.name.replace(/'/g,"\\'")}', ${price}, -1)">−</button>
         <span class="qty-value">${qty}</span>
-        <button class="qty-btn" onclick="changeQty('${shop}', '${item.name.replace(/'/g,"\\'")}', ${price}, 1)">+</button>
+        <button class="qty-btn" onclick="changeQty('${shopKey}', '${item.name.replace(/'/g,"\\'")}', ${price}, 1)">+</button>
       </div>
     `;
     container.appendChild(card);
@@ -698,11 +668,8 @@ function renderMenu() {
 }
 
 // =============================================
-// INIT
+// FILTER FUNCTION
 // =============================================
-
-let currentFilter = "veg";
-
 function filterItems(type) {
   currentFilter = type;
   document.querySelectorAll('.filter-btn').forEach(btn => {
@@ -711,17 +678,11 @@ function filterItems(type) {
   renderMenu();
 }
 
-const currentShop = getShopFromURL();
-if (currentShop && shopMenus[currentShop]) {
-  document.getElementById("shopName").textContent = currentShop;
-} else {
-  document.getElementById("shopName").textContent = "Shop not found";
-}
-
+// =============================================
+// INIT
+// =============================================
 renderMenu();
 updateCartUI();
 </script>
 </body>
 </html>
-
-for this i want to add images for these items
